# Knochenfrakturen-Klassifikation

./: github-link.txt  pyproject.toml  readme.md
m1lib/: m2_transfer_wrapper.py  training_wrapper.py
m2/: 05_train_inception_v3.py
results/base_gap/: architecture_summary.txt  classification_report.csv  test_metrics.csv  training_history.csv
results/clustering/: cluster_class_table.csv  clustering_results.csv  tsne_results.csv
results/data_check/: class_distribution.csv  flagged_images.csv  image_inventory.csv  summary.csv
results/experiments/CNN_01_Flatten_Baseline/: architecture_summary.txt  classification_report.csv  classification_report.txt  confusion_matrix.csv  experiment_metadata.json  experiment_summary.csv  (+3 more)
results/splits/: dataset_split.csv  processed_dataset.csv  processed_dataset_gray.csv  processed_distribution.csv  processed_distribution_gray.csv
scripts/: 01_data_check.py  02_clustering.py  03_make_split.py  04_preprocess.py  04_preprocess_grayscale.py  05_dataset.py  05_train_cnn01_flatten_baseline.py  06_train_cnn02_baseline_gap.py  07_train_cnn03_deeper_gap.py  08_train_cnn04_deeper_gap_batchNorm.py  09_train_cnn05_deeper_gap_augmentation.py  10_train_cnn06_deeper_gap_stronger_dropout_gray.py  11_train_cnn07_wider_gap_stronger_dropout_gray.py  12_train_cnn08_efficient_small_gray.py  13_train_cnn09_global_max_pool_gray.py  14_train_cnn10_leakyrelu_gray.py  15_train_cnn11_combined_strategy.py  16_train_cnn12_strided_flatten_bn_leakyrelu.py  17_train_cnn13_strided_reduced_flatten_bn_leakyrelu.py  18_train_cnn14_strided_flatten_augmentation.py
(+131 files in other folders)
