[project]
name = "bone-fracture-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "zmansour10",email = "zaher99mansour@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.2,<3.0)",
    "matplotlib (>=3.8,<4.0)",
    "pillow (>=10,<12)",
    "scipy (>=1.11,<2.0)",
    "scikit-learn (>=1.4,<2.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "tensorflow-macos (==2.16.2)",
    "tensorflow-metal (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

